[gd_scene load_steps=4 format=3 uid="uid://28e4cfswtgqf"]

[ext_resource type="PackedScene" uid="uid://bx1f47jvxrqnm" path="res://prefabs/ui/item_renderer.tscn" id="1_a2ltt"]
[ext_resource type="Script" uid="uid://bk22vsn4ysf7k" path="res://src/ui/inventory_item.gd" id="1_rhav3"]
[ext_resource type="Texture2D" uid="uid://cu8fhiqqorn0j" path="res://assets/ui/drop_shadow_alt.png" id="2_ghvo8"]

[node name="InventoryItem" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rhav3")

[node name="DropShadow" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(256, 256)
texture = ExtResource("2_ghvo8")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(256, 256)

[node name="ItemRenderer" parent="SubViewportContainer" instance=ExtResource("1_a2ltt")]
unique_name_in_owner = true
handle_input_locally = false
render_target_update_mode = 4
